log
Fri, Apr 18, 2025  1:43:48 AM: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
test.c: In function 'enlarge_test':
test.c:442:9: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  442 |         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:439:18: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  439 |             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:438:39: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  438 |             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
cc1.exe: all warnings being treated as errors
eeef3b7
Fri, Apr 18, 2025  1:44:05 AM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
test.c: In function 'enlarge_test':
test.c:442:9: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  442 |         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:439:18: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  439 |             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:438:39: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  438 |             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
cc1.exe: all warnings being treated as errors
8068468
Fri, Apr 18, 2025  1:48:10 AM: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
test.c: In function 'enlarge_test':
test.c:442:9: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  442 |         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:439:18: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  439 |             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:438:39: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  438 |             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
cc1.exe: all warnings being treated as errors
dfb0348
Sat, Apr 19, 2025  3:09:31 PM: 
 hashmap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'insertMap':
hashmap.c:43:23: error: passing argument 2 of 'hash' makes integer from pointer without a cast [-Werror=int-conversion]
   43 |     int p = hash(key, value);
      |                       ^~~~~
      |                       |
      |                       void *
hashmap.c:26:29: note: expected 'long int' but argument is of type 'void *'
   26 | long hash( char * key, long capacity) {
      |                        ~~~~~^~~~~~~~
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
test.c: In function 'enlarge_test':
test.c:442:9: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  442 |         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:439:18: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  439 |             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:438:39: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  438 |             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
cc1.exe: all warnings being treated as errors
24cede6
